2001-10-19  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-red-face): Add -face, and to all other color
	faces.

	* nethack-api.el (nethack-api-toplines, nethack-api-win-message)
	(nethack-api-win-message, nethack-api-win-map)
	(nethack-api-win-status, nethack-api-ae, nethack-api-ae)
	(nethack-api-li, nethack-api-li, nethack-api-ospeed): Comment out.

	* nethack.el (nethack): If the process is already running,
	display all of the game windows.

	* nethack-api.el (nethack-api-exit-nhwindows): Clean up buffers.
	(nethack-map-buffer): New variable.
	(nethack-status-buffer): Likewise.
	(nethack-message-buffer): Likewise.
	(nethack-api-create-nhwindow): Record the "standard" buffers into
	the above variables.
	(nethack-api-display-nhwindow): Setup the windows for first time
	use.
	(nethack-status-window-height): New variable.
	(nethack-message-window-height): Likewise.
	(nethack-setup-window-configuration): New function.

2001-10-18  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-apix.el: Remove file, move functions into
	nethack-api.el.

	* nethack-keys.el (nethack-mode-map): Add nethack-command-loot
	binding.

	* nethack.el (gamegrid,nethack-apix): Don't require.
	(nethack-process-filter): Remove save-excursion wrapper.
	(nethack-setup-map-buffer): Remove.
	(nethack-map-mode): Turn off show-paren mode.

	* nethack-api.el (gamegrid): Require.
	(nethack-api-curs): Wrap in save-excursion.  Subtract 1 from x
	value.
	(nethack-api-putstr): Wrap in save-excursion.  Propertize strings
	going into menu and text windows.
	(nethack-api-print-glyph): Wrap in save-excursion.  Subtract 1
	from x value.
	(nethack-api-get-ext-cmd): Remove.
	(nethack-choose-attribute): Move here from nethack-apix.el.  Check
	for choice lists of only 1 element here.
	(nethack-api-choose-role): Move here from nethack-apix.el.  Don't
	Check for choice lists of only 1 element here.
	(nethack-api-choose-race): Likewise.
	(nethack-api-choose-gender): Likewise.